# kmer-learn

./: .gitignore  CITATION.bib  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: 01_basic_kernel_matrix.ipynb  02_distance_metrics_and_kernels.ipynb  03_svc_with_kernel.ipynb  04_clustering_sequences.ipynb  05_score_long_sequence.ipynb  06_weighted_kernel.ipynb  07_transform_and_comparison.ipynb  08_windowed_3d_tensors.ipynb  09_spectrum_encoder_and_differential.ipynb  10_gappy_encoder.ipynb  11_mismatch_encoder.ipynb  12_shuffler_and_chunker.ipynb
kmer/: __init__.py  _common.h
kmer/ann/: __init__.py  index.py
kmer/ann/_native/: __init__.py  _gkm_hnsw.cpp
kmer/distance/: __init__.py  _base.py  alignment.py  edit.py
kmer/encoders/: __init__.py  gappy.py  mismatch.py  spectrum.py
kmer/encoders/_native/: _common.h  _gappy.c  _gappy_pylib.c  _mismatch.c  _mismatch_pylib.c  _spectrum.c  _spectrum_pylib.c
kmer/kernels/: __init__.py  gkmkernel.py
kmer/kernels/_native/: __init__.py  _gkmkern_pylib.c  gkmkern.c  gkmkern.h
kmer/models/: __init__.py  differential.py  knn.py  svm.py
kmer/perturb/: __init__.py  _base.py  chunker.py  shuffler.py
kmer/perturb/_native/: __init__.py  _chunker.c  _chunker_pylib.c  _common.h  _shuffler.c  _shuffler_pylib.c
kmer/tests/: brute_force_reference.py  test_ann.py  test_background_model.py  test_chunker.py  test_differential.py  test_distances.py  test_encoders.py  test_gkm_reference.py  test_mismatch.py  test_models.py  test_shuffler.py
kmer/tests/data/gkmsvm_reference/: gkm_L10_k4_d1.txt  gkm_L10_k4_d2.txt  gkm_L10_k4_d3.txt  gkm_L10_k6_d2.txt  (+8 more)
kmer/tests/gkm/: test_gkmkern.py
kmer/utils/: __init__.py  seq.py
scripts/: generate_notebooks.py
