[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmer-learn"
version = "0.1.0"
description = "A modern Python toolkit for classical sequence machine learning"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Arsenii Zinkevich"},
]
keywords = [
    "bioinformatics",
    "machine-learning",
    "sequence-analysis",
    "kmer",
    "svm",
    "kernel",
    "genomics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
]

[project.optional-dependencies]
fast = [
    "rapidfuzz>=3.0",
    "parasail>=1.3",
]
io = [
    "pyfastx>=0.8",
]
test = [
    "pytest>=7.0",
]
dev = [
    "pytest>=7.0",
    "rapidfuzz>=3.0",
    "parasail>=1.3",
    "jupyter",
    "matplotlib",
    "nbformat",
    "nbclient",
]

[project.urls]
Homepage = "https://github.com/synbioml/kmer-learn"
Repository = "https://github.com/synbioml/kmer-learn"
Issues = "https://github.com/synbioml/kmer-learn/issues"

[tool.setuptools.packages.find]
include = ["kmer*"]

[tool.pytest.ini_options]
testpaths = ["kmer/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
